gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test24065.d
version https://git-lfs.github.com/spec/v1
oid sha256:d1b26776e3cf708b97505659e534635e2bae3c16db0a0e122c4a609eb3bf686f
size 561
